complete landing-page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Odin Project Dummysite</title>
-    <link href="./style.css" rel="stylesheet"
+    <link href="./style.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -33,44 +34,46 @@
       </div>
       <div class="info">
         <p class="info-text-primary">Some random information.</p>
-        <div class="card">
-          <img
-            src="./img/cat-4542301_640.jpg"
-            alt="yawning cat on bed"
-            class="card-img"
-          />
-          <p class="text-secondary">this is some subtext under an image</p>
-        </div>
-        <div class="card">
-          <img
-            src="./img/cat-4218424_640.jpg"
-            alt="yawning cat on the street"
-            class="card-img"
-          />
-          <p class="text-secondary">this is some subtext under an image</p>
-        </div>
-        <div class="card">
-          <img
-            src="./img/cat-3113513_640.jpg"
-            alt="sleepy cat"
-            class="card-img"
-          />
-          <p class="text-secondary">this is some subtext under an image</p>
-        </div>
-        <div class="card">
-          <img
-            src="./img/cat-11946_640.jpg"
-            alt="screaming cat in the forest"
-            class="card-img"
-          />
-          <p class="text-secondary">this is some subtext under an image</p>
+        <div class="content">
+          <div class="card">
+            <img
+              src="./img/cat-4542301_640.jpg"
+              alt="yawning cat on bed"
+              class="card-img"
+            />
+            <p class="text-secondary">this is some subtext under an image</p>
+          </div>
+          <div class="card">
+            <img
+              src="./img/cat-4218424_640.jpg"
+              alt="yawning cat on the street"
+              class="card-img"
+            />
+            <p class="text-secondary">this is some subtext under an image</p>
+          </div>
+          <div class="card">
+            <img
+              src="./img/cat-3113513_640.jpg"
+              alt="sleepy cat"
+              class="card-img"
+            />
+            <p class="text-secondary">this is some subtext under an image</p>
+          </div>
+          <div class="card">
+            <img
+              src="./img/cat-11946_640.jpg"
+              alt="screaming cat in the forest"
+              class="card-img"
+            />
+            <p class="text-secondary">this is some subtext under an image</p>
+          </div>
         </div>
       </div>
       <div class="quote">
         <p class="quote-text-primary">
-          To purr or not to purr, that is the question.
+          Twenty naps from now you will be more disappointed by the mice you didn't chase than by the ones you did catch. So throw off the cushion confines. Leap away from the cozy blanket. Chase the playful winds in your whiskers. Explore. Dream. Purr-scover.
         </p>
-        <p class="quote-text-secondary">- Whiskers Shakespeare</p>
+        <p class="quote-text-secondary"> - Mark Pawin</p>
       </div>
       <div class="cta">
         <div>
@@ -83,7 +86,7 @@
       </div>
     </main>
     <footer>
-        <p>Copyright © The Odin Project 2021</p>
+      <p>Copyright © The Odin Project 2021</p>
     </footer>
   </body>
 </html>
